# browserstrategygame

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: default.yml
browserstrategygame/: __main__.py  app.py  app_test.py  database.py  test_app.py
browserstrategygame/api/v1/: __init__.py  building_templates.py  buildings.py  material_costs.py  material_effects.py  material_yields.py  materials.py  players.py  realms.py  storage.py  ticks.py  transactions.py
browserstrategygame/v1/: __init__.py  buildings.py  material_yields.py  materials.py  realms.py  ticks.py
src/: __main__.py  app.py  config.py  database.py  main.py
src/api/: __init__.py
src/api/v1/: __init__.py  building_templates.py  buildings.py  material_requirements.py  material_yields.py  materials.py  players.py  storage.py  turns.py
src/database/: __init__.py  player.py  turn.py
src/v1/: __init__.py  building_templates.py  buildings.py  material_costs.py  material_yields.py  materials.py  players.py  storage.py  ticks.py
