[tool.poetry]
name = "browserstrategygame"
version = "0.1.0"
description = ""
authors = ["Arthur <arthur@corenzan.com>", "Douglas Barbosa <...>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
sqlmodel = "^0.0.14"
uvicorn = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pre-commit = "^3.6.0"
debugpy = "^1.8.0"
httpx = "^0.26.0"
pytest = "^7.4.4"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
